# gemini-watermark-bot

./: .dockerignore  .env.example  .gitignore  =1.11  Dockerfile  compose.yaml  pyproject.toml
src/gemini_watermark_bot/: __main__.py  bot.py  charts.py  config.py  i18n.py  watermark.py
